<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".TestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_play"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0"
            android:thumb="@drawable/ic_baseline_adjust_24" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#f8f8f8"
            android:elevation="2dp"
            app:cardElevation="2dp"
            app:shapeAppearance="@style/CornedCut">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Q_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/question_icon"
                        android:src="@drawable/diarrhea" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txt_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_speak"
                        android:contentDescription="@string/play"
                        android:clickable="true"
                        android:onClick="sepeakQs"
                        />
                </LinearLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                    <TextView
                        android:id="@+id/txt_question_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:lineHeight="35dp"
                        android:text="@string/question_exp" />
                </androidx.core.widget.NestedScrollView>
                <RadioGroup
                    android:id="@+id/rg_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_empty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:visibility="invisible"
                        />

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:text="@string/yes" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:onClick="preview"
                        android:textColor="#FFF"
                        app:backgroundTint="@color/colorAccent"
                        app:icon="@android:drawable/ic_media_rew" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:onClick="next"
                        android:textColor="#FFF"
                        app:backgroundTint="@color/colorAccent"
                        app:icon="@android:drawable/ic_media_ff" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>